--- a/components/ui/slider/slider.module.css
+++ b/components/ui/slider/slider.module.css
@@ -1,10 +1,10 @@
 .root {
   position: relative;
   display: flex;
-  gap: 8px;
+  gap: 1rem;
   align-items: center;
-  height: 20px;
-  width: 200px;
+  height: 1.25rem;
+  max-width: 28.625rem;
 }
 
 .input {
@@ -12,10 +12,13 @@
   background: transparent;
   outline: none;
   width: 100%;
-  padding-right: 18px;
+  padding-right: 1.125rem;
   text-align: end;
   font-family: sans-serif;
-  font-size: 14px;
+}
+
+.input:disabled {
+  color: inherit;
 }
 
 .inputWrapper {
@@ -27,7 +30,7 @@
   content: "€";
   position: absolute;
   top: 50%;
-  right: 6px;
+  right: 0.375rem;
   transform: translateY(-50%);
   color: #333;
   pointer-events: none;
@@ -38,28 +41,31 @@
   position: relative;
   flex-grow: 1;
   border-radius: 1px;
-  height: 2px;
+  height: 0.125rem;
 }
 
 .thumb {
   position: absolute;
-  top: -5px;
+  top: -0.5rem;
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 1.125rem;
+  height: 1.125rem;
   background-color: black;
   border-radius: 100%;
   transition:
     transform 50ms ease-out,
     box-shadow 50ms ease-out;
+  cursor: grab;
+  transform: translate(-50%);
+  touch-action: none;
 }
 
 .thumb:hover,
-.thumb:focus {
-  transform: scale(1.2);
+.thumb:focus,
+.thumb.grabbing {
+  transform: translate(-50%) scale(1.2);
 }
 
 .thumb:focus {
   outline: none;
-  box-shadow: 0 0 0 5px rgba(0, 0, 255, 0.5);
 }
