componentized SliderInput and SliderThumb, extracted util functions from useSlider, added new overlapping thumbs solution, added tests for api and utils, added keymap guide

--- a/components/slider-showcase/slider-showcase.module.css
+++ b/components/slider-showcase/slider-showcase.module.css
@@ -1,7 +1,10 @@
 .container {
   display: flex;
   justify-content: center;
-  padding-top: calc(33.33vh - 70px);
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
+  padding-top: calc(25vh - 70px);
 }
 
 .sliderWrapper {
