--- a/components/ui/slider/slider.module.css
+++ b/components/ui/slider/slider.module.css
@@ -1,13 +1,19 @@
 .root {
   --thumb-width: 1.125rem;
+  --thumb-offset: 1.25rem;
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1.375rem;
   max-width: 28.625rem;
-  box-sizing: border-box;
   padding-left: calc(var(--thumb-width) / 2);
   padding-right: calc(var(--thumb-width) / 2);
+  padding-top: var(--thumb-offset);
+  padding-bottom: var(--thumb-offset);
+}
+
+.grabbing {
+  cursor: grabbing;
 }
 
 .inputsContainer {
@@ -17,42 +23,10 @@
   margin-right: calc(var(--thumb-width) / -2);
 }
 
-.input {
-  border: none;
-  background: transparent;
-  outline: none;
-  width: 100%;
-  padding-right: 1.125rem;
-  color: inherit;
-  text-align: end;
-  font-size: inherit;
-  font-family: sans-serif;
-}
-
-.input:disabled {
-  color: inherit;
-}
-
-.inputWrapper {
-  position: relative;
-  width: 4rem;
-}
-
-.inputWrapper::after {
-  content: "€";
-  position: absolute;
-  top: 50%;
-  right: 0.375rem;
-  transform: translateY(-50%);
-  color: #333;
-  pointer-events: none;
-}
-
 .track {
   background-color: var(--gray);
   position: relative;
   width: 100%;
-  border-radius: 1px;
   height: 1px;
   margin-top: 0.5rem;
 }
@@ -61,43 +35,10 @@
   position: absolute;
   height: 1px;
   background-color: var(--black);
-  border-radius: 1px;
-}
-
-.thumb {
-  position: absolute;
-  top: calc(var(--thumb-width) / 2 * -1);
-  display: block;
-  width: var(--thumb-width);
-  height: var(--thumb-width);
-  background-color: var(--black);
-  border-radius: 100%;
-  transition:
-    transform 50ms ease-out,
-    box-shadow 50ms ease-out;
-  cursor: grab;
-  transform: translate(-50%);
-  touch-action: none;
-}
-
-.thumb:hover,
-.thumb:focus,
-.thumb.grabbing {
-  transform: translate(-50%) scale(1.2);
-}
-
-.thumb:focus {
-  outline: none;
 }
 
 @media (min-width: 1024px) {
   .root {
     --thumb-width: 0.625rem;
-  }
-
-  .thumb:hover,
-  .thumb:focus,
-  .thumb.grabbing {
-    transform: translate(-50%) scale(1.4);
   }
 }
