--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@
 body {
   font-family: sans-serif;
   color: var(--black);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
