--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -5,20 +5,46 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.titleLink {
-  text-decoration: underline;
-  text-underline-offset: 0.25rem;
-  text-decoration: none;
-  transition: text-decoration 0.2s ease-in-out;
-}
-
-.titleLink:hover {
-  text-decoration: underline;
-}
-
 .main {
   max-width: 76rem;
   flex-grow: 1;
   margin: 0 auto;
   padding: 1.5rem;
+}
+
+.titleLink {
+  position: relative;
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
+  text-decoration-thickness: 1px;
+}
+
+.titleLink::before,
+.titleLink::after {
+  content: "";
+  position: absolute;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: currentColor;
+  bottom: -0.35rem;
+  transition: transform 100ms ease-out;
+}
+
+.titleLink::before {
+  left: 0;
+  transform: translate(-50%);
+}
+
+.titleLink::after {
+  right: 0;
+  transform: translate(50%);
+}
+
+.titleLink:hover::before {
+  transform: translate(-50%) scale(1.5);
+}
+
+.titleLink:hover::after {
+  transform: translate(50%) scale(1.5);
 }
