--- a/components/ui/range/range-thumb.module.css
+++ b/components/ui/range/range-thumb.module.css
@@ -18,6 +18,7 @@
   border-radius: 100%;
   transition: transform 100ms ease-out;
   cursor: grab;
+  user-select: none;
   touch-action: none;
 }
 
