--- a/components/ui/range/range.module.css
+++ b/components/ui/range/range.module.css
@@ -10,6 +10,7 @@
   padding-right: calc(var(--thumb-width) / 2);
   padding-top: var(--thumb-offset);
   padding-bottom: var(--thumb-offset);
+  user-select: none;
 }
 
 .grabbing {
@@ -29,6 +30,7 @@
   width: 100%;
   height: 1px;
   margin-top: 0.5rem;
+  user-select: none;
 }
 
 .activeTrack {
